@@ -1,7 +1,8 @@
 package io.github.makbn.jthumbnail.core.util.mime;
 
-import io.github.makbn.jthumbnail.core.exception.ThumbnailerException;
+import io.github.makbn.jthumbnail.core.exception.ThumbnailException;
 import lombok.extern.slf4j.Slf4j;
+
 import org.apache.commons.io.FilenameUtils;
 import org.apache.tika.Tika;
 
@@ -12,7 +13,6 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-
 
 /**
  * Wrapper class for MIME Identification of Files.
@@ -43,7 +43,6 @@ public class MimeTypeDetector {
                     exts.forEach(ext -> outputThumbnailExtensionCache.put(ext, identifier.getThumbnailExtension()));
             }
         }
-
     }
 
     /**
@@ -68,7 +67,6 @@ public class MimeTypeDetector {
 
         String mimeType = Files.probeContentType(file.toPath());
 
-
         if (mimeType == null || mimeType.isEmpty()) {
             Tika tika = new Tika();
             mimeType = tika.detect(file);
@@ -82,13 +80,10 @@ public class MimeTypeDetector {
             log.debug(e.getMessage());
         }
 
-
-        if (mimeType != null && mimeType.isEmpty())
-            mimeType = null;
+        if (mimeType != null && mimeType.isEmpty()) mimeType = null;
 
         // Identifiers may re-write MIME.
-        for (MimeTypeIdentifier identifier : extraIdentifiers)
-            mimeType = identifier.identify(mimeType, null, file);
+        for (MimeTypeIdentifier identifier : extraIdentifiers) mimeType = identifier.identify(mimeType, null, file);
 
         log.info("Detected MIME-Type of {} is {}", file.getName(), mimeType);
         return mimeType;
@@ -104,11 +99,10 @@ public class MimeTypeDetector {
     public String getStandardExtensionForMimeType(String mimeType) {
         List<String> extensions = getExtensionsCached(mimeType);
 
-        if (extensions == null)
-            return null;
+        if (extensions == null) return null;
 
         try {
-            return extensions.get(0);
+            return extensions.getFirst();
         } catch (IndexOutOfBoundsException e) {
             return null;
         }
@@ -116,8 +110,7 @@ public class MimeTypeDetector {
 
     protected List<String> getExtensionsCached(String mimeType) {
         List<String> extensions = extensionsCache.get(mimeType);
-        if (extensions != null)
-            return extensions;
+        if (extensions != null) return extensions;
 
         extensions = new ArrayList<>();
         switch (mimeType) {
@@ -165,8 +158,7 @@ public class MimeTypeDetector {
     public boolean doesExtensionMatchMimeType(String extension, String mimeType) {
         List<String> extensions;
         extensions = getExtensionsCached(mimeType);
-        if (extensions == null)
-            return false;
+        if (extensions == null) return false;
 
         return extensions.contains(extension);
     }
@@ -177,14 +169,13 @@ public class MimeTypeDetector {
      *
      * @param file input file for generating thumbnail.
      * @return the identified extension or 'png' in other cases
-     * @throws ThumbnailerException if there is a problem on reading file
+     * @throws ThumbnailException if there is a problem on reading file
      */
-    public String getOutputExt(File file) throws ThumbnailerException {
+    public String getOutputExt(File file) throws ThumbnailException {
         try {
             String ext = FilenameUtils.getExtension(file.getName());
             String mime = getMimeType(file);
-            if (outputThumbnailExtensionCache.containsKey(ext))
-                return outputThumbnailExtensionCache.get(ext);
+            if (outputThumbnailExtensionCache.containsKey(ext)) return outputThumbnailExtensionCache.get(ext);
 
             for (MimeTypeIdentifier identifier : extraIdentifiers) {
                 List<String> exts = identifier.getExtensionsFor(mime);
@@ -195,7 +186,7 @@ public class MimeTypeDetector {
                 }
             }
         } catch (IOException e) {
-            throw new ThumbnailerException(e);
+            throw new ThumbnailException(e);
         }
 
         return "png";
